package com.nexusaid.core.entity.enums;

public enum UserType {
    VOLUNTEER,
    TRAINER,
    DONOR,
    ADMIN
}
